syntax = "proto3";

package tanagra.configschema;

option go_package = "github.com/DataBiosphere/tanagra/criteriaselector/configschemapb";
option java_package = "bio.terra.tanagra.proto.criteriaselector.configschema";
option java_outer_classname = "CFPlaceholder";

message Placeholder {
  // core/attribute
  string attribute = 1;

  // core/unhintedValue
  message GroupByAttributes {
    repeated string attribute = 1;
  }
  map<string, GroupByAttributes> groupByAttributesPerOccurrenceEntity = 2;

  // core/search
  string entityGroup = 3;
  string searchAttribute = 4;

  // core/multiAttribute
  string entityGroup_multiAttr = 5;

  // sd/biovu
  bool plasma_filter = 6;

  // core/outputUnfiltered
  repeated string output_unfiltered_entities = 7;
}
